# objects-detector

./: README.md  config.h  configure.ac
res/: app.glade
src/: Makefile.am  convolution.c  convolution.h  gui.c  gui.h  imgproc.c  imgproc.h  main.c  objects_generator.c  objects_generator.h
